# code-guardian

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/code_guardian/: cli.py  github.py  logging_config.py  models.py  parser.py
src/code_guardian/core/: __init__.py  github.py  graph.py  parser.py  scanner.py
tests/: test_graph.py  test_parser.py  test_severity_counts.py
