[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-guardian"
version = "0.1.0"
description = "Small CLI that scans local repositories with Trivy and emits JSON/DOT reports."
readme = "README.md"
authors = [
  { name = "Karen Hovhannisyan" }
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
code-guardian = "code_guardian.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_guardian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
